--- a/style.css
+++ b/style.css
@@ -1,1 +1,7 @@
-
+header{
+  background-image: url(background0.jpg);
+  height: 100vh;
+  background-size: cover;
+  background-position: ceter;
+  
+}
