--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
+*{
+	margin: 0;
+	padding: 0;
+	font-family: Century Gothic;
+}
+  
+
 header{
   background-image: url(background0.jpg);
   height: 100vh;
   background-size: cover;
   background-position: ceter;
-  
 }
