--- a/style.css
+++ b/style.css
@@ -9,5 +9,5 @@ header{
   	background-image: url(background0.jpg);
   	height: 100vh;
   	background-size: cover;
-  	background-position: ceter;
+  	background-position: center;
 }
