--- a/style.css
+++ b/style.css
@@ -19,10 +19,11 @@ ul {
 
 
 .logo {
-	float: left;
-	width: 50px;
-	height: auto;
-	border-radius: 50%;
+	position: fixed;
+  	bottom: 0;
+  	right: 0;
+  	width: 300px;
+  	border: 3px solid #73AD21;
 }
 
 .account{
