--- a/style.css
+++ b/style.css
@@ -20,10 +20,10 @@ ul {
 
 .logo {
 	position: fixed;
-  	bottom: 0;
-  	right: 0;
+  	top: 0;
+  	left: 0;
   	width: 300px;
-  	border: 3px solid #73AD21;
+  	border-radius: 3px solid #FFFFF0;
 }
 
 .account{
